Remove references to Java 6 performance advice